Fix input label overflow

--- a/src/scss/components/_diamodal-form-input.scss
+++ b/src/scss/components/_diamodal-form-input.scss
@@ -56,6 +56,7 @@ $diamodal-input-label-font-color: $diamodal-secondary-text-color !default;
         margin: 0 0 0 10px;
         top: 0;
         left: 0;
+        max-width: 100%;
         font-size: $diamodal-input-font-size;
         font-weight: normal;
         color: $diamodal-input-label-font-color;
