--- a/src/scss/components/_diamodal.scss
+++ b/src/scss/components/_diamodal.scss
@@ -99,6 +99,7 @@
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: stretch;
+      min-height: 50px;
       height: auto;
       padding-left: 30px;
       border-bottom: 1px solid $diamodal-color-gray--light;
